--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
-    "framer-motion": "^12.19.2",
+    "framer-motion": "^12.23.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
-    "tailwindcss": "^4.1.11"
+    "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^4.1.11",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
